src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');





* {
  box-sizing: border-box;
}
html {
  scroll-behavior: smooth;
}
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",

    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}


.text{

  font-size: 1.2rem;
  font-weight: 400;
  color: #333;
}

.image-hero {
  transform: rotate(0deg) ;

  top: 0;
  left: -500px;
  top: 60px;
  height: 110%;

}




.blogs-swipper .swiper{
  padding:30px 0 !important;
}
.blogs-swipper .swiper .blogItem{
  width: 80%;
  height: auto !important;
}
.blogs-swipper .swiper .swiper-slide{
  /* align-self: stretch !important */
}
@media screen and (max-width: 991px){
  .blogs-swipper .swiper .blogItem{
    width: 100%;
  }
}

@media screen and  (max-width:768px) {
  .image-hero{

    transform: rotate(-90deg);
   top:300px;
  left: -20px;
  width: 100%;
  overflow: hidden;
  
  }

  .blogs-swipper .swiper{
    padding:0px !important;
  }

}

nav{
  z-index: 99999;
}


#mediumBlue-button{
  background-color: #4699C1;
  color: #FFFFFF;
  font-weight: bold;
  border-width: 0.1em;
  border-style: solid;
  border-color: #4699C1;
  transition: 0.3s ease-in-out ;
}

#mediumBlue-button:hover{
  background-color: #FFFFFF;
  color: #4699C1;
  
}
.LastBtm{
  background-color: white !important;
  color: #70cdd6;
  font-weight: bold;
  font-size: x-large;
  border-style: none;
  border-radius: 9999px;
  padding-left: 12px;
 
}
.LastBtm:hover{
  color: #287a81;
}

